--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/GestionDuPatrimoine?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3308/Monuments?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
-server.port=8081
+spring.jpa.hibernate.ddl-auto=update
+server.port=8080
